@@ -5,6 +5,7 @@
 * Adyen: Update selectedBrand mapping for Google Pay [jcreiff] #4763
 * Shift4: Add vendorReference field [jcreiff] #4762
 * Shift4: Add OAuth error [aenand] #4760
+* Stripe PI: Add billing address details to Apple Pay and Google Pay tokenization request [BritneyS] #4761
 
 == Version 1.128.0 (April 24th, 2023)
 * CheckoutV2: Add support for Shipping Address [nicolas-maalouf-cko] #4755
